# motional

./: README.md  motional-service-protocol.md  setup-linux.sh
.github/workflows/: build.yml  release.yml
apps/motional-lock/: Cargo.toml  build.rs  package-macos.sh
apps/motional-lock/assets/: motional-icon.icns
apps/motional-lock/src/: actions.rs  config.rs  lib.rs  monitor.rs  msp.rs  service_control.rs  service_runtime.rs
docs/: client-services.md  hubitat-install.md
hubitat/: Motional.groovy
